src/Screens/ContractManager/index.module.scss
/* ... */
.selectedDay {
    background: #7165E3 0% 0% no-repeat padding-box;
    color: white;
}

.dateNotSet {
    font: normal normal 600 23px/30px Montserrat;
    color: #7165E3;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.addContractBody.serviceBoxStyle.cloneBlockStyle.tableHeight.proofBorder.timeSheetBoxStyle.contractScrollStyle::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.addContractBody.serviceBoxStyle.cloneBlockStyle.tableHeight.proofBorder.timeSheetBoxStyle.contractScrollStyle {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

.fileNameTextStyle {
    text-align: left;
    font: normal normal normal 18px/24px Montserrat;
    letter-spacing: 1.44px;
    color: #707070;
    opacity: 0.71;
}

